Flask Changelog
===============

Here you can see the the list of changes for the current dev version and previous tzdb releases.

Version 0.1
-----------

(Not released, current dev version)

- Basic package structure.
- Added tzdb command: get latest upstream update data.
- Created sqlalchemy models.
- Added db schema management: Create/dump schema.
- Added db data utils: download and import dumps.