@@ -5,6 +5,7 @@ Description:
 
 Usage:
   pydb upstream-date [--log-level=<log_level>]
+  pydb update [--force] [--log-level=<log_level>]
 
 Options:
   -h --help                Show this screen.
@@ -17,7 +18,8 @@ import logging
 from docopt import docopt
 from schema import Schema, SchemaError, Use, And
 
-from tzdb.db import get_upstream_date
+from tzdb.db import get_upstream_date, load_data, download_data
+from tzdb.queries import get_version_date as get_local_date
 
 
 logging.basicConfig(format='%(message)s')
@@ -32,7 +34,9 @@ def validate_data(args):
             lambda l: l in ('ERROR', 'WARNING', 'INFO', 'DEBUG'),
             error='Invalid log level'
         ),
+        '--force': Use(bool),
         'upstream-date': Use(bool),
+        'update': Use(bool),
     })
 
     try:
@@ -41,8 +45,22 @@ def validate_data(args):
         exit(e)
 
 
-def cmd_upstream_date():
+def cmd_upstream_date(args):
     print(get_upstream_date())
+
+
+def cmd_update(args):
+    force = args['--force']
+
+    if not force and get_local_date() >= get_upstream_date():
+        log.info('Local database is up to date.')
+        return
+
+    log.info('Downloading data...')
+    download_data()
+
+    log.info('Loading data...')
+    load_data()
 
 
 def main():
@@ -50,8 +68,10 @@ def main():
 
     log.setLevel(args['--log-level'])
 
-    if args['upstream-date']:
-        cmd_upstream_date()
+    if args['update']:
+        cmd_update(args)
+    elif args['upstream-date']:
+        cmd_upstream_date(args)
 
 
 if __name__ == '__main__':
